# lib_math

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
cmake/: lib_mathConfig.cmake.in
doc/: lib_math_doc.html
doc/html/: angle_8h_source.html  annotated.html  annotated_dup.js  camera__projector_8h.html  camera__projector_8h.js  camera__projector_8h_source.html  classes.html  classmmath_1_1_camera_projector.html  classmmath_1_1_camera_projector.js  classmmath_1_1_config_spc.html  classmmath_1_1_config_spc.js  classmmath_1_1_pose.html  classmmath_1_1_pose.js  classmmath_1_1_r_t.html  classmmath_1_1_r_t.js  classmmath_1_1continuum_1_1_config_spc.html  classmmath_1_1continuum_1_1_config_spc.js  classmmath_1_1continuum_1_1_joint_spc.html  classmmath_1_1continuum_1_1_joint_spc.js  continuum__configspc_8h.html  continuum__configspc_8h_source.html  continuum__pose_8h.html  continuum__pose_8h.js  continuum__pose_8h_source.html  dcontinuum__pose_8h.html  dcontinuum__pose_8h.js  dcontinuum__pose_8h_source.html  dir_2486f5e7637db8087b05278434656ab8.html  dir_2486f5e7637db8087b05278434656ab8.js  dir_275e1b71bca8f7639b69dcf54f6fdfb8.html  dir_275e1b71bca8f7639b69dcf54f6fdfb8.js  dir_2823843953881f8a6ce69a3ff697303f.html  dir_2823843953881f8a6ce69a3ff697303f.js  dir_34d954bb735cb42b1344165860861123.html  dir_34d954bb735cb42b1344165860861123.js  dir_43b0ffb2bd7ee35e4ea17a5cd7148fa5.html  dir_43b0ffb2bd7ee35e4ea17a5cd7148fa5.js  dir_64cd2d2d4ecf3043516ee06574546c21.html  dir_64cd2d2d4ecf3043516ee06574546c21.js  dir_64e1d3eead229c5ffef23e910b5cf873.html  (+87 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+23 more)
examples/: CMakeLists.txt  lib_math_examples.cpp
export/: angle.h  lib_math.h  linspace.h  math_angle_radian.h  math_rotation.h  math_utility.h
export/curve/: gauss_curve_2d.h  line_2d.h
export/kine/: continuum_configspc.h  continuum_pose.h  dcontinuum_pose.h  kine_precision.h  math_configspc.h  math_continuum_configspc.h  math_continuum_rt.h  math_rt.h  pose.h
export/lib_math/: math_precision.h
export/lib_math/cam/: camera_projector.h
export/lib_math/curve/: gauss_curve_2d.h  line_2d.h
export/lib_math/kine/: continuum_configspc.h  continuum_pose.h  dcontinuum_pose.h  pose.h
export/lib_math/matrix/: drotation.h  mat.h  rotation.h  skew.h
export/lib_math/timer/: timer.h
export/lib_math/util/: angle.h  linspace.h
export/matrix/: drotation.h  mat.h  rotation.h  skew.h
export/timer/: timer.h
export/util/: angle.h  linspace.h
include/lib_math/curve/: gauss_curve_2d.h
include/lib_math/kine/: dcontinuum_pose.h  pose.h
include/lib_math/matrix/: skew.h
include/lib_math/timer/: timer.h
include/lib_math/util/: angle.h
src/: camera_projector.cpp  continuum_pose.cpp  dcontinuum_pose.cpp  math_ratation.cpp  math_utility.cpp  pose.cpp
src/kine/: math_continuum_rt.cpp  math_rt.cpp
test/: CMakeLists.txt  main.cpp
test/src/: test_cam.cpp  test_continuum_pose.cpp  test_fitGaussian.cpp  test_linspace.cpp  test_math_utility.cpp  test_pose.cpp  test_rotation.cpp
